--- a/helpchildren/contacts.css
+++ b/helpchildren/contacts.css
@@ -38,7 +38,8 @@ p.text-cont, p.text-cont>a{
 }
 #button-home>a:hover{
 	color: #fff;
-	background: #FF0000;
+	background: #555;
+	box-shadow: 0 0 10px #FFF;
 	transition: all .2s ease;
 }
 
